# MADS-SMA-Exam2

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/mads_sma_exam2/: Slapgate_adjectives.html  Slapgate_annotations.html  Slapgate_mentions.html  Slapgate_pnoun.html  Slapgate_proper_noun.html  Slapgate_verbs.html  slapgate2.ipynb
