[tool.poetry]
name = "mads_sma_exam2"
version = "0.1.0"
description = ""
authors = ["Janosch Hoefer"]

[tool.poetry.scripts]
main = "src.mads_sma_exam2.main:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
