[tool.poetry]
name = "mads_sma_exam2"
version = "0.1.0"
description = ""
authors = ["Janosch Hoefer"]

[tool.poetry.scripts]
main = "src.mads_sma_exam2.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
spacy = "^3.3.1"
en-core-web-sm = {path = "packages/en_core_web_sm-3.3.0-py3-none-any.whl"}
numpy = "^1.23.0"
networkx = "^2.8.4"
tqdm = "^4.64.0"
pyarrow = "^8.0.0"
python-louvain = "^0.16"
pyvis = "^0.2.1"
seaborn = "^0.11.2"
ipywidgets = "^7.7.1"
ipykernel = "^6.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
